<resources>
    <string name="app_name">witsSocial2</string>
    <string name="StudentNumber">email_address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">reType Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="SignUpButton"><u>Sign up now!</u></string>
    <string name="logIn">Log In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="UserNameToLogIn">Please enter your Username</string>
    <string name="PasswordToLogIn">Please enter your Password</string>
    <string name="Email_Address">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="add_a_post_nshare_what_you_re_feeling">Add a post\nshare what you\'re feeling</string>
    <string name="body_of_the_message">body of the message</string>
    <string name="button">Button</string>
    <string name="add_an_url_for_an_image">add an url for an image</string>
    <string name="post">post</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tell_eveyone_n_what_s_on_you_re_mind">Tell eveyone\n what\'s on you\'re mind</string>
    <string name="image_url">image url</string>
</resources>
